kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vigo-auth-organisation-selector
spec:
  selector:
    matchLabels:
      app: vigo-auth-organisation-selector
  template:
    metadata:
      labels:
        app: vigo-auth-organisation-selector
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: vigo-auth-organisation-selector
          image: ghcr.io/fintlabs/vigo-auth-organisation-selector:sha-0e3c55a
          ports:
            - containerPort: 8080

          resources:
            limits:
              memory: "500Mi"
              cpu: "100m"
            requests:
              memory: "300Mi"
              cpu: "25m"

        - name: stunnel
          image: ghcr.io/fintlabs/vigo-auth-organisation-selector-ldap-proxy:sha-05c9d22
          ports:
            - containerPort: 389

          resources:
            limits:
              memory: "100Mi"
              cpu: "50m"
            requests:
              memory: "30Mi"
              cpu: "10m"
