kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vigo-auth-organisation-selector
spec:
  ports:
    - port: 8080
  type: ClusterIP
  selector:
    app: vigo-auth-organisation-selector
