kustomize/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vigo-auth-organisation-selector
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match:  Host(`auth.felleskomponent.no`)
      services:
        - name: vigo-auth-organisation-selector
          port: 8080
